[package]
name = "check_qualys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
indicatif = "0.17.3"
addr = "0.1.3"